--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "cron-parser": "^4.2.0",
     "long-timeout": "0.1.1",
-    "sorted-array-functions": "^1.3.0"
+    "sorted-array-functions": "^1.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "airtap": "^4.0.4",
